<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

  <LinearLayout
      android:layout_width="409dp"
      android:layout_height="730dp"
      android:background="#6FB4CB"
      android:orientation="vertical"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="1dp"
      tools:layout_editor_absoluteY="1dp">

    <TextView
        android:id="@+id/TextoMasajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/TurcoButton"
        android:fontFamily="@font/aclonica"
        android:text="@string/TurcoButton"
        android:textColor="#AD1457"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        app:srcCompat="@drawable/download"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/TextoMasajesRelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/TurcoButton"
        android:fontFamily="casual"
        android:minHeight="48dp"
        android:onClick="SwichColor"
        android:text="@string/textoprincipalMasajes"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ReglasEspecificsMasajes"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/ReglasEspecificasMasajes"
        android:fontFamily="casual"
        android:text="@string/ReglasEspecificasMasajes"
        android:textColor="#E91E63"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/SwicthReglas"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:contentDescription="@string/AceptarReglas"
        android:fontFamily="casual"
        android:onClick="SwichColor"
        android:text="@string/AceptarReglas"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>