<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#6FB4CB"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/TextoPrincipalSauna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/SaunaButton"
            android:fontFamily="@font/aclonica"
            android:text="@string/SaunaButton"
            android:textColor="#AD1457"
            android:textSize="96sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            app:srcCompat="@drawable/download3"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/TextoReglasSauna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Reglassauna"
            android:fontFamily="casual"
            android:text="@string/Reglassauna"
            android:textColor="#AD1457"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ReglasEspecificas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/RglasEspecificasSauna"
            android:textColor="#E91E63"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonSauna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/AceptarReglas"
            android:fontFamily="casual"
            android:onClick="ButtonColor"
            android:text="@string/AceptarReglas"
            android:textColor="#AD1457"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>