<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="76dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="601dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">

        <TextView
            android:id="@+id/TextoRegistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:text="@string/TextoRegistro"
            android:textSize="34sp"
            tools:ignore="MissingConstraints"
            tools:text="@string/TextoRegistro" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="156dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="519dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/TextoEmail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:contentDescription="@string/TextoIngresarEmail"
            android:text="Enter your e-mail address"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/TextoIngresarEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <CheckBox
            android:id="@+id/checkEmail"
            android:layout_width="169dp"
            android:layout_height="48dp"
            android:contentDescription="@string/checkEmail"
            android:text="@string/checkEmail" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="415dp"
        android:layout_height="176dp"
        android:layout_marginBottom="319dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textopassword"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/passwordvalue"
            android:text="Create a password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/passwordvalue"
            android:inputType="textPassword" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Switch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="231dp"
        android:layout_height="150dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="165dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="112dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/checkbox_on_background" />

    </LinearLayout>

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="164dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="566dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>